tests/calico_testcases/example_policies/testcase11/testcase11-denyFirstAlsoEgressDefaultAllow.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase11-deny-denyFirstAlsoEgress-defaultAllow
  namespace: kube-system
spec:
  order: 1
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
    protocol: TCP
    source:
      selector: "!has(app)"
  egress:
  - action: Deny

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase11-allow-denyFirstAlsoEgress-defaultAllow
  namespace: kube-system
spec:
  order: 3
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: has(tier)
  egress:
  - action: Allow

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase11-default-denyFirstAlsoEgress-defaultAllow
  namespace: kube-system
spec:
  order: 4
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow
