tests/calico_testcases/example_policies/testcase11/testcase11-denyFirstDefaultAllow.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase11-deny-denyFirst-defaultAllow
  namespace: kube-system
spec:
  order: 1
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
    protocol: TCP
    source:
      selector: "!has(app)"
  egress:
  - action: Allow

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase11-allow-denyFirst-defaultAllow
  namespace: kube-system
spec:
  order: 3
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: has(tier)
  egress:
  - action: Allow

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase11-default-defaultAllow
  namespace: kube-system
spec:
  order: 4
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
