tests/calico_testcases/example_policies/testcase11/testcase11-denyFirstDefaultDeny.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase11-deny-denyFirst-DefaultDeny
  namespace: kube-system
spec:
  order: 1
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
    protocol: TCP
    source:
      selector: !has(app)
  egress:
  - action: Allow

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase11-allow-denyFirst-DefaultDeny
  namespace: kube-system
spec:
  order: 3
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: has(tier)
